hero section added

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beats-Learning
         </title>
+         <!-- Css Link-->
         <link rel="stylesheet" href="style.css">
+          <!-- Css Link-->
+             <!-- Font Awesome  -->
+             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+                <!--Font Awesome -->
 </head>
 <body>
                                 <!-- Navigation Area Start-->
 <div class="header">
     <div class="logo-section">
-        <img src="img/Logo.png" alt="" class="header-logo">
+        <img src="img/Logo.png" alt="logo" class="header-logo">
     </div>
     <div class="nav-section">
         <a class="nav" href="#">Home</a>
@@ -26,8 +31,37 @@
         <button curser="pointer" class="heder-btn">Login</button>
     </div>
 </div>
-                                <!-- Navigation Area Start-->
 
+                                <!-- Hero Area Start-->
+
+<div class="hero">
+    <div class="hero-one">
+        <img src="img/hero-middle-shape.png" alt="hero-middle-shape.png" class="hero-middle-shape">
+        <h3 class="hero-h-three">TRAINING TO SUCCEED</h3>
+        <img class="hero-first-shape" src="img/hero-first-shape.png" alt="hero-first-shape.png">
+        <h1 class="hero-h-one-">Believe and you <br> can achieve </h1>
+        <p class="hero-one-pera">Learn any skill from comfort of your home <br>
+            Anywhere and Anytime for only $10</p>
+<button class="hero-apply-btn">Apply Now  <i class="fa-solid fa-arrow-right"></i></button>
+<img src="img/hero-second-shape.png" alt="hero-second-shape.png" class="hero-second-shape">
+<img src="img/hero-third-shape.png" alt="hero-third-shape.png" class="hero-third-shape">
+    </div>
+    <div class="hero-two">
+        <img  src="img/object-one.png" alt="object-one.png" class="hero-two-object-one">
+        <img  src="img/object-two.png" alt="" class="hero-two-object-two">
+        <img  src="img/object-three.png" alt="" class="hero-two-object-three">
+        <img  src="img/object-four.png" alt="" class="hero-two-object-four">
+        <img  src="img/object-five.png" alt="" class="hero-two-object-five">
+        <img  src="img/hero-two-shape-one.png" alt="hero-two-shape-one.png" class="hero-two-shape-one">
+        <img  src="img/hero-two-shpe-two.png" alt="hero-two-shape-one.png" class="hero-two-shape-two">
+    </div>
+    
+</div>
+
+                                <!-- Hero Area End-->
+
+
+                                
 
 
 
